--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,83 +1,77 @@
-name: Deploy to Multiple EC2 Hosts
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ test ]
+    branches: [ test ]      # or main, as you prefer
+
+env:
+  REGISTRY: myregistry.com
+  REPO_PREFIX: deas-la
 
 jobs:
-  deploy-all:
+  build_and_push:
+    name: Build & Push Docker Images
     runs-on: ubuntu-latest
 
     steps:
-      # 1) Checkout to grab docker-compose.yml
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v3
 
-      # 2) Start ssh-agent with your PEM
-      - name: Start ssh-agent
+      - name: Login to Docker registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ secrets.REGISTRY_USER }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
+
+      - name: Build & push each service
+        run: |
+          declare -A services=(
+            ["alert-generator-service"]="Alert Management/alert-generator-service"
+            ["alert-router-service" ]="Alert Management/alert-router-service"
+            ["delivery-service"     ]="Delivery-Logging/delivery-service"
+            ["logger-service"       ]="Delivery-Logging/logger-service"
+            ["auth-service"         ]="Delivery-Logging/auth-service"
+          )
+          for name in "${!services[@]}"; do
+            context="${services[$name]}"
+            image="${{ env.REGISTRY }}/${{ env.REPO_PREFIX }}/$name:latest"
+            echo "Building $name from $context → $image"
+            docker build -t "$image" "$context"
+            docker push "$image"
+          done
+
+  deploy:
+    name: Deploy to EC2 Hosts
+    needs: build_and_push
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Start SSH agent
         uses: webfactory/ssh-agent@v0.5.4
         with:
           ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
-      # -------- ALERT GENERATOR --------
-      - name: Deploy alert-generator
+      - name: Deploy to all EC2 hosts
         run: |
-          # Copy only the compose file
-          scp -o StrictHostKeyChecking=no docker-compose.yml \
-            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST_ALERT_GENERATOR }}:~/docker-compose.yml
+          HOSTS=(
+            "${{ secrets.EC2_HOST_ALERT_GENERATOR }}"
+            "${{ secrets.EC2_HOST_ALERT_ROUTER }}"
+            "${{ secrets.EC2_HOST_DELIVERY }}"
+            "${{ secrets.EC2_HOST_LOGGER }}"
+            "${{ secrets.EC2_HOST_AUTH }}"
+          )
 
-          # SSH & run just the generator container
-          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST_ALERT_GENERATOR }} << 'EOF'
-            set -e
-            # Pull the latest image and (re)create only this service
-            docker compose -f ~/docker-compose.yml pull alert-generator
-            docker compose -f ~/docker-compose.yml up -d alert-generator
-          EOF
+          for host in "${HOSTS[@]}"; do
+            echo "→ Deploying to $host"
+            scp -o StrictHostKeyChecking=no docker-compose.yml \
+               ${{ secrets.EC2_USER }}@$host:~/docker-compose.yml
 
-      # -------- ALERT ROUTER --------
-      - name: Deploy alert-router
-        run: |
-          scp -o StrictHostKeyChecking=no docker-compose.yml \
-            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST_ALERT_ROUTER }}:~/docker-compose.yml
-
-          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST_ALERT_ROUTER }} << 'EOF'
-            set -e
-            docker compose -f ~/docker-compose.yml pull alert-router
-            docker compose -f ~/docker-compose.yml up -d alert-router
-          EOF
-
-      # -------- DELIVERY --------
-      - name: Deploy delivery
-        run: |
-          scp -o StrictHostKeyChecking=no docker-compose.yml \
-            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST_DELIVERY }}:~/docker-compose.yml
-
-          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST_DELIVERY }} << 'EOF'
-            set -e
-            docker compose -f ~/docker-compose.yml pull delivery
-            docker compose -f ~/docker-compose.yml up -d delivery
-          EOF
-
-      # -------- LOGGER --------
-      - name: Deploy logger
-        run: |
-          scp -o StrictHostKeyChecking=no docker-compose.yml \
-            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST_LOGGER }}:~/docker-compose.yml
-
-          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST_LOGGER }} << 'EOF'
-            set -e
-            docker compose -f ~/docker-compose.yml pull logger
-            docker compose -f ~/docker-compose.yml up -d logger
-          EOF
-
-      # -------- AUTH --------
-      - name: Deploy auth
-        run: |
-          scp -o StrictHostKeyChecking=no docker-compose.yml \
-            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST_AUTH }}:~/docker-compose.yml
-
-          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST_AUTH }} << 'EOF'
-            set -e
-            docker compose -f ~/docker-compose.yml pull auth
-            docker compose -f ~/docker-compose.yml up -d auth
-          EOF
+            ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@$host << 'EOF'
+              set -e
+              # Pull the latest images (no local build)
+              docker compose -f ~/docker-compose.yml pull
+              # (Re)create all services in detached mode
+              docker compose -f ~/docker-compose.yml up -d --no-build
+            EOF
+          done
