--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,11 @@
-# docker-compose.yml (raíz de DEAS-LA)
-
+version: '3.8'
 services:
-
-  # Infraestructure
+  # Infra (optional in prod, you can omit if running infra elsewhere)
   zookeeper:
     image: bitnami/zookeeper:latest
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
-    ports:
-      - "2181:2181"
+    ports: ["2181:2181"]
 
   kafka:
     image: bitnami/kafka:latest
@@ -16,55 +13,44 @@ services:
       - KAFKA_BROKER_ID=1
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
       - ALLOW_ANONYMOUS_LOGIN=yes
-    ports:
-      - "9092:9092"
-    depends_on:
-      - zookeeper
+    ports: ["9092:9092"]
+    depends_on: [zookeeper]
 
   mongodb:
     image: mongo:6
-    ports:
-      - "27018:27017"
+    ports: ["27018:27017"]
 
-  # Microservices
+  # Microservices – Dev builds and Prod images
   alert-generator:
     build:
       context: "./Alert Management/alert-generator-service"
-    ports:
-      - "8000:8000"
-    depends_on:
-      - kafka
+    image: myregistry.com/deas-la/alert-generator-service:latest
+    ports: ["8000:8000"]
+    depends_on: [kafka]
 
   alert-router:
     build:
       context: "./Alert Management/alert-router-service"
-    ports:
-      - "8001:8001"
-    depends_on:
-      - kafka
+    image: myregistry.com/deas-la/alert-router-service:latest
+    ports: ["8001:8001"]
+    depends_on: [kafka]
 
   delivery:
     build:
       context: "./Delivery-Logging/delivery-service"
-    ports:
-      - "8002:8002"
-    depends_on:
-      - kafka
+    image: myregistry.com/deas-la/delivery-service:latest
+    ports: ["8002:8002"]
+    depends_on: [kafka]
 
   logger:
     build:
       context: "./Delivery-Logging/logger-service"
-    ports:
-      - "8003:8003"
-    depends_on:
-      - mongodb
+    image: myregistry.com/deas-la/logger-service:latest
+    ports: ["8003:8003"]
+    depends_on: [mongodb]
 
   auth:
     build:
       context: "./Delivery-Logging/auth-service"
-    ports:
-      - "8004:8004"
-
-networks:
-  default:
-    driver: bridge
+    image: myregistry.com/deas-la/auth-service:latest
+    ports: ["8004:8004"]
