--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ test ]   # or 'main'
+    branches: [ test ]
 
 env:
   REGISTRY: docker.io
@@ -11,37 +11,7 @@ env:
 
 jobs:
   build_and_push:
-    name: Build & Push to Docker Hub
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build & Push Services
-        run: |
-          declare -A services=(
-            [alert-generator-service]="Alert Management/alert-generator-service"
-            [alert-router-service]="Alert Management/alert-router-service"
-            [delivery-service]="Delivery-Logging/delivery-service"
-            [logger-service]="Delivery-Logging/logger-service"
-            [auth-service]="Delivery-Logging/auth-service"
-          )
-
-          for svc in "${!services[@]}"; do
-            ctx="${services[$svc]}"
-            img="${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ env.PROJECT }}-${svc}:latest"
-            echo "Building $svc from $ctx → $img"
-            docker build -t "$img" "$ctx"
-            docker push "$img"
-          done
+    # … unchanged …
 
   deploy:
     name: Deploy to EC2 Hosts
@@ -49,6 +19,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code          # ← Add this
+        uses: actions/checkout@v3
+
       - name: Start SSH agent
         uses: webfactory/ssh-agent@v0.5.4
         with:
@@ -67,11 +40,13 @@ jobs:
           for host in "${HOSTS[@]}"; do
             echo "→ Deploying to $host"
 
-            # Copy the unified compose file
+            # Copy the unified compose file into the runner workspace
             scp -o StrictHostKeyChecking=no docker-compose.yml \
               ${{ secrets.EC2_USER }}@"$host":~/docker-compose.yml
 
-            # SSH in and pull + start without rebuilding
+            # Pull & restart containers on the EC2
             ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@"$host" \
-              "set -e; cd ~; docker compose -f docker-compose.yml pull; docker compose -f docker-compose.yml up -d --no-build"
+              "set -e; cd ~; \
+               docker compose -f docker-compose.yml pull; \
+               docker compose -f docker-compose.yml up -d --no-build"
           done
